--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>JSON</title>
 </head>
 <body>
-<h1> trabajando con un JSON (java script oriented object)</h1>
+<h1> Trabajando con un JSON (java script oriented object)</h1>
 <h3>Agregar Heroes</h3>
 <form action="viernes.php" method="post">
 	<table>
