--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>JSON</title>
 </head>
 <body>
-<h1> Trabajando con un JSON (java script oriented object)</h1>
+<h1> Trabajando con un JSON (Java Script Oriented Object)</h1>
 <h3>Agregar Heroes</h3>
 <form action="viernes.php" method="post">
 	<table>
@@ -22,7 +22,7 @@
 			<tr><td>Poderes:</td>
 			<td><input type="text" name="poderes"></td></tr>
 			<tr><td>Imagen:</td>
-			<td><input type="text" name="imagen"></td></tr>
+			+<td><input type="text" name="imagen"></td></tr>
 			<tr><td><input type="submit" name="submit" value="Agregar"></td></tr>
 	</table>
 </form>
